--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
-@import 'utils';
-@import 'fonts';
-@import 'typography';
+.main {
+  &__content {
+    @include padding-inline;
 
-body {
-  background: $c-gray;
+    display: flex;
+    flex-direction: column;
+    gap: 100px;
+
+    @include on-tablet {
+      gap: 88px;
+    }
+
+    @include on-desktop {
+      gap: 200px;
+    }
+  }
 }
