--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,6 @@
-$c-gray: #eee;
+$page-color: rgba(255, 255, 255, 1);
+$article-type: rgba(104, 116, 128, 1);
+$menu-color: rgba(26, 90, 76, 1);
+$article-description: rgba(78, 78, 78, 1);
+$main-dark: rgba(15, 14, 8, 1);
+$main-red: rgba(241, 74, 39, 1);
