--- a/src/styles/icon.scss
+++ b/src/styles/icon.scss
@@ -9,15 +9,15 @@
     height: 61px;
     width: 55px;
 
-    @include on-tablet {
-      width: 220px;
-      height: 72px;
-    }
+    // @include on-tablet {
+    //   width: 220px;
+    //   height: 72px;
+    // }
 
-    @include on-desktop {
-      width: 170px;
-      height: 72px;
-    }
+    // @include on-desktop {
+    //   width: 170px;
+    //   height: 72px;
+    // }
   }
 
   &--menu {
