--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -25,10 +25,13 @@
     right: 0;
     opacity: 0;
     pointer-events: none;
+    transition: all 0.4s;
+    transform: translateX(-100%);
 
     &:target {
       opacity: 1;
       pointer-events: all;
+      transform: translateX(0);
     }
   }
 
