--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,6 +1,28 @@
 @font-face {
-  font-family: Roboto, Arial, Helvetica, sans-serif;
-  src: url('../fonts/Roboto-Regular-webfont.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
+  font-family: 'IBM Plex Sans', serif;
+  src: url('../fonts/IBMPlexSans-Regular.ttf');
+}
+
+@font-face {
+  font-family: 'IBM Plex Sans', serif;
+  src: url('../fonts/IBMPlexSans-Bold.ttf');
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: 'IBM Plex Sans', serif;
+  src: url('../fonts/IBMPlexSans-Medium.ttf');
+  font-weight: medium;
+}
+
+@font-face {
+  font-family: 'IBM Plex Sans', serif;
+  src: url('../fonts/IBMPlexSans-Light.ttf');
+  font-weight: light;
+}
+
+@font-face {
+  font-family: Montserrat, serif;
+  src: url('../fonts/Montserrat-VariableFont_wght.ttf');
+  font-weight: 100 900;
 }
