--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,7 @@
 $c-gray: #eee;
+$green-bg: #1a5a4c;
+$gray-text: #687480;
+$orange-bg: #f14a27;
+$gray-deep-text: #4e4e4e;
+$light-gray: #e0e0e0;
+$light-black: #0f0e08;
