--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,21 @@
-h1 {
-  @extend %h1;
+p,
+a,
+ul {
+  @extend %p;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  @extend %h;
+}
+
+h2 {
+  font-size: 36px;
+  line-height: 36px;
+}
+
+img {
+  display: block;
 }
