--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,15 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import './blocks/index';
+@import './items/index';
 
 body {
   background: $c-gray;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  scroll-behavior: smooth;
 }
