--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,24 @@
-%h1 {
-  font-family: Roboto, sans-serif;
+%normalize {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  text-decoration: none;
+}
+
+%p {
+  font-family: 'IBM Plex Sans', serif;
   font-weight: 400;
+  color: #000;
+
+  @extend %normalize;
+}
+
+%h {
+  font-family: Montserrat, sans-serif;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 30px;
+  color: #000;
+
+  @extend %normalize;
 }
