--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,6 @@
-@import 'utils';
-@import 'fonts';
-@import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import 'utils/mixins';
+@import 'utils/fonts';
+@import 'utils/vars';
+@import 'block/page';
+@import 'block/header';
+@import 'block/top-bar';
