--- a/src/styles/items/button.scss
+++ b/src/styles/items/button.scss
@@ -16,6 +16,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    border: 0;
 
     @include on-tablet {
       height: 70px;
