--- a/src/styles/blocks/actual.scss
+++ b/src/styles/blocks/actual.scss
@@ -7,6 +7,10 @@
 
   @include on-desktop {
     padding-block: 200px;
+    background-image: url('../images/actual/actual--three.png');
+    background-repeat: no-repeat;
+    background-position: center bottom 200px;
+    background-size: 100% 25%;
   }
 
   &__content {
@@ -148,6 +152,7 @@
 
     @include on-desktop {
       height: 550px;
+      background-image: none;
     }
   }
 
