--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -32,7 +32,7 @@
 
     @include on-desktop {
       @include my-grid;
-  
+
       row-gap: 30px;
     }
   }
@@ -42,6 +42,8 @@
     height: 100%;
     object-fit: cover;
     object-position: center;
+    
+    @include hover(transform, scale(1.03));
 
     @include on-desktop {
       &--one {
