start with menu

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,18 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import 'blocks';
 
 body {
+  margin: 0;
+  padding: 0;
   background: $c-gray;
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-weight: 300;
+}
+
+input,
+textarea,
+body button {
+  font-family: 'IBM Plex Sans', sans-serif;
 }
