--- a/src/styles/blocks.scss
+++ b/src/styles/blocks.scss
@@ -1,1 +1,6 @@
+@import './blocks/page';
 @import './blocks/header';
+@import './blocks/icon';
+@import './blocks/menu';
+@import './blocks/nav';
+@import './blocks/schedule';
