--- a/src/styles/utils/extends.scss
+++ b/src/styles/utils/extends.scss
@@ -17,3 +17,25 @@
     font-size: 72px;
   }
 }
+
+%logo-font {
+  font-family: Montserrat, sans-serif;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 100%;
+
+  @include on-tablet {
+    font-size: 36px;
+  }
+}
+
+%nav-font {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 100%;
+  color: #fff;
+
+  @include on-desktop {
+    font-size: 22px;
+  }
+}
