--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,11 +1,16 @@
 .header {
   position: relative;
 
-  &__menu {
+  &__title-menu {
     position: absolute;
-    z-index: 10;
-    color: red;
-    font-weight: 700;
+  }
+
+  &__icon {
+    margin-top: 27px;
+
+    @include on-tablet {
+      margin-top: 39px;
+    }
   }
 
   &__content {
@@ -26,7 +31,7 @@
     }
 
     @include on-desktop {
-      grid-column: 7 / -1;
+      grid-column: 6 / -1;
       height: 655px;
     }
   }
@@ -43,7 +48,7 @@
 
     @include on-desktop {
       grid-row: 1 / 2;
-      grid-column: 1 / 7;
+      grid-column: 1 / 6;
       justify-items: start;
     }
   }
@@ -68,7 +73,7 @@
     }
   }
 
-  &__title {
+  &__title-image {
     @extend %h1;
 
     @include on-tablet {
@@ -78,6 +83,36 @@
 
     @include on-desktop {
       margin-top: 206px;
+    }
+  }
+
+  &__logo {
+    @extend %logo-font;
+
+    box-sizing: border-box;
+    margin-inline: auto;
+    margin-top: 9px;
+    height: 61px;
+    width: 55px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    color: inherit;
+
+    @include on-tablet {
+      margin: 0;
+      margin-top: 15px;
+      width: 220px;
+      height: 72px;
+    }
+
+    @include on-desktop {
+      margin: 0;
+      margin-top: 15px;
+      width: 170px;
+      height: 72px;
     }
   }
 
@@ -113,7 +148,7 @@
       height: 50px;
       width: 50px;
       position: absolute;
-      background: url('../images/arrow.svg') no-repeat center;
+      background: url('../images/icons/arrow.svg') no-repeat center;
       background-size: 7.14px 12px;
     }
   }
