add menu transition

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -3,6 +3,7 @@
 
   &__title-menu {
     position: absolute;
+    top: 0;
   }
 
   &__icon {
@@ -150,6 +151,30 @@
       position: absolute;
       background: url('../images/icons/arrow.svg') no-repeat center;
       background-size: 7.14px 12px;
+    }
+  }
+
+  .header__actions {
+    display: none;
+    margin-top: 104px;
+    align-items: center;
+    font-style: 14px;
+    line-height: 100%;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #687480;
+    transform: rotate(-90deg);
+    transform-origin: 0 100%;
+
+    &-line {
+      display: inline-block;
+      width: 70;
+      border-bottom: 1px solid #1a5a4c;
+      margin-right: 20px;
+    }
+
+    @include on-desktop {
+      display: flex;
     }
   }
 }
