--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -4,6 +4,8 @@
   height: 24px;
   width: 24px;
 
+  @include hover(transform, scale(1.2));
+
   &--menu {
     background: url('../images/icons/burger.svg') no-repeat center center;
     background-size: 18px 12px;
