--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -4,5 +4,13 @@
   &__menu {
     top: 0;
     position: absolute;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s ease-in;
+
+    &:target {
+      opacity: 1;
+      pointer-events: all;
+    }
   }
 }
