--- a/src/styles/utils/extends.scss
+++ b/src/styles/utils/extends.scss
@@ -18,6 +18,34 @@
   }
 }
 
+%h2 {
+  margin: 0;
+  padding: 0;
+  font-family: Montserrat, sans-serif;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 100%;
+  text-align: center;
+
+  @include on-tablet {
+    font-size: 48px;
+  }
+}
+
+%h3 {
+  margin: 0;
+  padding: 0;
+  font-family: Montserrat, sans-serif;
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 100%;
+  text-align: left;
+
+  @include on-tablet {
+    font-size: 36px;
+  }
+}
+
 %logo-font {
   font-family: Montserrat, sans-serif;
   font-size: 30px;
