--- a/src/styles/blocks.scss
+++ b/src/styles/blocks.scss
@@ -4,3 +4,6 @@
 @import './blocks/menu';
 @import './blocks/nav';
 @import './blocks/schedule';
+@import './blocks/content';
+@import './blocks/actions';
+@import './blocks/exhibition';
