--- a/src/styles/blocks/exhibition.scss
+++ b/src/styles/blocks/exhibition.scss
@@ -58,7 +58,7 @@
     font-size: 16px;
     line-height: 150%;
     font-weight: 700;
-    color: #687480;
+    color: #1a5a4c;
   }
 
   &__title {
