--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -4,6 +4,7 @@
   &__menu {
     top: 0;
     position: absolute;
+    z-index: 10;
     opacity: 0;
     pointer-events: none;
     transition: opacity 0.3s ease-in;
