--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,8 @@
-$c-gray: #eee;
+$c-white: #fff;
+$c-gray: #687480;
+$c-dark-gray: #4e4e4e;
+$c-black: #000;
+$c-coal: #0f0e08;
+$c-dark-green: #1a5a4c80;
+$c-green: #1a5a4c;
+$c-orange: #f14a27;
