--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,6 +3,7 @@
 @import 'typography';
 @import 'blocks/page';
 @import 'blocks/header';
+@import 'blocks/bold';
 @import 'blocks/menu';
 @import 'blocks/menu-nav';
 @import 'blocks/menu-info';
