landing page museum

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,13 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import 'header';
+@import 'page';
+@import 'events';
+@import 'gallery';
+@import 'subscribe';
+@import 'menu';
+@import 'footer';
 
 body {
   background: $c-gray;
