--- a/src/styles/blocks/content.scss
+++ b/src/styles/blocks/content.scss
@@ -2,11 +2,44 @@
   &__title {
     @extend %h2;
 
-    margin-block: 88px 80px;
+    margin-bottom: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
     height: 72px;
+
+    @include on-tablet {
+      margin-bottom: 48px;
+    }
+
+    @include on-desktop {
+      justify-content: start;
+      margin-bottom: 56px;
+    }
+  }
+
+  &__actions {
+    margin-top: 70px;
+
+    @include on-tablet {
+      margin-top: 88px;
+    }
+
+    @include on-desktop {
+      margin-top: 200px;
+    }
+  }
+
+  &__galery {
+    margin-top: 120px;
+
+    @include on-tablet {
+      margin-top: 88px;
+    }
+
+    @include on-desktop {
+      margin-top: 200px;
+    }
   }
 }
