add gallery tablet with greed

--- a/src/styles/blocks.scss
+++ b/src/styles/blocks.scss
@@ -8,4 +8,4 @@
 @import './blocks/actions';
 @import './blocks/exhibition';
 @import './blocks/lecture';
-@import './blocks/galery';
+@import './blocks/gallery';
