finish with subscribe

--- a/src/styles/blocks/content.scss
+++ b/src/styles/blocks/content.scss
@@ -42,4 +42,16 @@
       margin-top: 200px;
     }
   }
+
+  &__subscribe {
+    margin-top: 100px;
+
+    @include on-tablet {
+      margin-top: 92px;
+    }
+
+    @include on-desktop {
+      margin-top: 200px;
+    }
+  }
 }
