fix width elements and refs

--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -1,12 +1,12 @@
 .events {
-  padding: 70px 0 183px;
+  padding: 70px 20px 60px;
 
   @include on-tablet {
-    padding: 88px 0 208px;
+    padding: 88px 34px 112px;
   }
 
   @include on-desktop {
-    padding: 200px 0 302px;
+    padding: 200px 0 104px;
     padding-top: 350px;
   }
 
@@ -18,17 +18,16 @@
     line-height: 100%;
     letter-spacing: 0%;
     text-align: center;
-    padding: 0 20px;
     padding-bottom: 40px;
     color: rgba(15, 14, 8, 1);
-    width: 280px;
+    width: 100%;
+    align-self: center;
 
     @include on-tablet {
       font-weight: 700;
       font-size: 48px;
-      padding: 0 34px;
       padding-bottom: 48px;
-      width: auto;
+      width: 100%;
     }
 
     @include on-desktop {
@@ -54,11 +53,10 @@
     display: flex;
     flex-direction: column;
     align-items: baseline;
-    padding: 0 20px;
+    width: 100%;
     padding-bottom: 60px;
 
     @include on-tablet {
-      padding: 0 34px;
       padding-bottom: 64px;
     }
 
@@ -71,8 +69,8 @@
   }
 
   &__image {
-    width: 280px;
-    height: 210px;
+    width: 100%;
+    height: auto;
     margin-bottom: 16px;
 
     transition: all $timeAnimation;
@@ -82,8 +80,8 @@
     }
 
     @include on-tablet {
-      width: 700px;
-      height: 520px;
+      width: 100%;
+      height: auto;
     }
 
     @include on-desktop {
@@ -173,10 +171,10 @@
     font-size: 16px;
     line-height: 150%;
     color: rgba(78, 78, 78, 1);
-    width: 280px;
+    width: 100%;
 
     @include on-tablet {
-      width: 460px;
+      width: 100%;
     }
 
     @include on-desktop {
