--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -149,6 +149,16 @@
     }
   }
 
+  &__text-link {
+    text-decoration: none;
+    color: rgba(15, 14, 8, 1);
+    transition: all $timeAnimation;
+
+    &:hover {
+      color: rgb(18, 98, 4);
+    }
+  }
+
   &__button {
     position: absolute;
     bottom: 125px;
