--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -4,16 +4,19 @@
   align-items: center;
   padding: 0 20px;
   padding-bottom: 100px;
+  padding-top: 183px;
 
   @include on-tablet {
     align-items: center;
     padding: 0 34px;
     padding-bottom: 92px;
+    padding-top: 208px;
   }
 
   @include on-desktop {
     padding: 0 55px;
     padding-bottom: 200px;
+    padding-top: 302px;
     align-items: start;
   }
 
