add task solution

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,13 @@
 $c-gray: #eee;
+$tablet-min-width: 576px;
+$desktop-min-width: 1024px;
+$font-title-montserrat: Montserrat, sans-serif;
+$font-description-ibm:
+  IBM Plex Sans,
+  sans-serif;
+$corporate-color: #1a5a4c;
+$hover-corporate-color: #3d9582;
+$black-color: #161616;
+$events-color: #687480;
+$button-forms-color: #f14a27;
+$hover-color: #d6391a;
