--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,14 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import './blocks/header';
+@import './blocks/top-bar';
+@import './blocks/icons';
+@import './blocks/page';
+@import './blocks/menu';
+@import './blocks/nav';
+@import './blocks/actual-events';
+@import './blocks/lection';
+@import './blocks/gallery';
+@import './blocks/subscription';
+@import './blocks/footer';
