--- a/src/styles/blocks.scss
+++ b/src/styles/blocks.scss
@@ -1,6 +1,8 @@
 @import './blocks/page';
-@import './blocks/header';
+@import './blocks/logo';
 @import './blocks/icon';
+@import './blocks/address';
+@import './blocks/header';
 @import './blocks/menu';
 @import './blocks/nav';
 @import './blocks/schedule';
@@ -11,3 +13,5 @@
 @import './blocks/gallery';
 @import './blocks/subscribe';
 @import './blocks/subscribe-form';
+@import './blocks/contacts';
+@import './blocks/footer';
