--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -15,4 +15,23 @@
     background: url('../images/icons/close.svg') no-repeat center center;
     background-size: 12px 12px;
   }
+
+  &--facebook {
+    background: url('../images/icons/facebook.svg') no-repeat center center;
+    background-size: 12px 12px;
+  }
+
+  &--instagram {
+    background: url('../images/icons/instagram.svg') no-repeat center center;
+    background-size: 12px 12px;
+  }
+
+  &--up {
+    height: 50px;
+    width: 50px;
+    border: 1px solid #1a5a4c;
+    border-radius: 50%;
+    background: url('../images/icons/up.svg') no-repeat center center;
+    background-size: 16px 16px;
+  }
 }
