--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -1,16 +1,23 @@
 .nav {
-  &__list {
-    margin: 0;
-    padding: 0;
-    display: grid;
-    grid-template-columns: 100px 100px;
-    gap: 24px 28px;
-    list-style: none;
+  margin: 0;
+  padding: 0;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 24px 28px;
+  list-style: none;
+  color: inherit;
 
-    @include on-tablet {
-      column-gap: 20px;
-      height: 72px;
-    }
+  @include on-tablet {
+    column-gap: 20px;
+    height: 72px;
+  }
+
+  &--column--100px {
+    grid-template-columns: 100px 100px;
+  }
+
+  &--gap--footer {
+    row-gap: 20px;
   }
 
   &__item {
@@ -22,5 +29,10 @@
 
     margin: 0;
     text-decoration: none;
+
+    &--footer {
+      font-size: 14px;
+      font-weight: 400;
+    }
   }
 }
