--- a/src/styles/utils/extends.scss
+++ b/src/styles/utils/extends.scss
@@ -40,6 +40,7 @@
   font-size: 28px;
   line-height: 100%;
   text-align: left;
+  color: #0f0e08;
 
   @include on-tablet {
     font-size: 36px;
@@ -61,7 +62,7 @@
   font-size: 16px;
   font-weight: 500;
   line-height: 100%;
-  color: #fff;
+  color: inherit;
 
   @include on-desktop {
     font-size: 22px;
