--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -14,4 +14,74 @@
       pointer-events: all;
     }
   }
+
+  &__title {
+    @extend %h2;
+
+    margin-bottom: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 72px;
+
+    @include on-tablet {
+      margin-bottom: 48px;
+    }
+
+    @include on-desktop {
+      justify-content: start;
+      margin-bottom: 56px;
+    }
+  }
+
+  &__actions {
+    margin-top: 70px;
+
+    @include on-tablet {
+      margin-top: 88px;
+    }
+
+    @include on-desktop {
+      margin-top: 200px;
+    }
+  }
+
+  &__gallery {
+    margin-top: 120px;
+
+    @include on-tablet {
+      margin-top: 88px;
+    }
+
+    @include on-desktop {
+      margin-top: 200px;
+    }
+  }
+
+  &__subscribe {
+    margin-top: 100px;
+
+    @include on-tablet {
+      margin-top: 92px;
+    }
+
+    @include on-desktop {
+      margin-top: 200px;
+    }
+  }
+
+  &__footer {
+    margin-top: 80px;
+    margin-bottom: 56px;
+
+    @include on-tablet {
+      margin-top: 120px;
+      margin-bottom: 36px;
+    }
+
+    @include on-desktop {
+      margin-top: 87px;
+    }
+  }
 }
