--- a/src/styles/blocks/schedule.scss
+++ b/src/styles/blocks/schedule.scss
@@ -2,6 +2,7 @@
   font-size: 14px;
   display: grid;
   grid-template-columns: 1fr;
+  color: inherit;
 
   @include on-tablet {
     grid-template-columns: repeat(2, 1fr);
