fixes after review

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,6 +1,6 @@
 .menu {
   height: 100vh;
-  background-color: $black-color;
+  background-color: #000000a8;
   font-family: $font-description-ibm;
   font-size: 16px;
 
