--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -128,9 +128,10 @@
 
   &__line {
     grid-column: span 2;
+    width: 100%;
+    height: 1px;
+    background-color: $corporate-color;
     margin-block: 20px 40px;
-    display: block;
-    border: 1px solid $corporate-color;
 
     @include on-tablet {
       margin-block: 64px;
@@ -139,7 +140,9 @@
 
     @include on-desktop {
       grid-column: 7 / 8;
-      margin: 0 35px;
+      height: 100%;
+      width: 1px;
+      place-self: center;
     }
   }
 
