--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -1,4 +1,6 @@
 .subscribe {
+  margin-left: -$padding-mobile;
+  width: calc(100% + 2 * $padding-mobile);
   background-image: url('./../images/subscribe/subscribe-mobile.png');
   background-repeat: no-repeat;
   background-position: center;
@@ -6,6 +8,13 @@
 
   @include on-tablet {
     background-image: url('./../images/subscribe/subscribe-tablet.png');
+    margin-left: -$padding-tablet;
+    width: calc(100% + 2 * $padding-tablet);
+  }
+
+  @include on-desktop {
+    margin-left: -$padding-desktop;
+    width: calc(100% + 2 * $padding-desktop);
   }
 
   &__context {
