--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -1,26 +1,56 @@
 .contacts {
   --row-gap: 40px;
 
+  @include page-grid;
+
   margin-top: 50px;
   row-gap: var(--row-gap);
   color: #0f0e08;
+  font-weight: 400;
 
-  @include page-grid;
-
-  &__top {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    grid-column: 2 span;
+  @include on-tablet {
+    row-gap: 64px;
   }
 
   &__logo {
     font-size: 36px;
   }
 
-  &__icons {
+  &__top {
+    grid-column: span 2;
     display: flex;
-    gap: 20px;
+    justify-content: space-between;
+    align-items: center;
+
+    @include on-tablet {
+      flex-direction: column;
+      gap: 62px;
+      justify-content: start;
+      align-items: start;
+      grid-column: span 1;
+      grid-row: 1/3;
+    }
+
+    @include on-desktop {
+      grid-column: span 2;
+      grid-row: 1/2;
+    }
+  }
+
+  &__schedule {
+    @include on-tablet {
+      grid-column: span 2;
+    }
+
+    @include on-desktop {
+      grid-column: span 2;
+    }
+  }
+
+  &__address {
+    @include on-tablet {
+      grid-column: span 2;
+    }
   }
 
   &__up {
@@ -30,9 +60,44 @@
     margin-top: calc(-1 * var(--row-gap));
     padding-bottom: 20px;
     border-bottom: 1px solid #1a5a4c80;
+
+    @include on-tablet {
+      margin-top: 0;
+      padding: 0;
+      grid-column: span 4;
+    }
+
+    @include on-desktop {
+      width: 50%;
+      height: 260px;
+      border-right: 1px solid #1a5a4c80;
+      border-bottom: none;
+      grid-column: span 1;
+    }
   }
 
   &__nav {
     grid-column: span 2;
+
+    @include on-tablet {
+      grid-column: 2 / -2;
+      grid-row: 3/4;
+    }
+
+    @include on-desktop {
+      grid-column: 8 / -2;
+      grid-row: 1/2;
+    }
+  }
+
+  &__icons {
+    display: flex;
+    gap: 20px;
+  }
+
+  &__icon-up {
+    @include on-tablet {
+      display: none;
+    }
   }
 }
