--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100..700&family=Montserrat:wght@100..900&display=swap');
+@import 'https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100..700&family=Montserrat:wght@100..900&display=swap';
 
 @font-face {
   font-family: Roboto, Arial, Helvetica, sans-serif;
