fix width elements and refs

--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -11,7 +11,6 @@
   }
 
   &__title {
-    align-self: flex-start;
     font-family: Montserrat, sans-serif;
     font-weight: 700;
     font-size: 36px;
@@ -28,10 +27,12 @@
       font-size: 48px;
       padding-bottom: 48px;
       width: 100%;
+      text-align: start;
     }
 
     @include on-desktop {
       padding-bottom: 56px;
+      text-align: start;
     }
   }
 
