--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -159,6 +159,16 @@
     }
   }
 
+  &__ref {
+    display: flex;
+    text-decoration: none;
+    transition: all $timeAnimation;
+
+    &:hover {
+      transform: scale(1.01);
+    }
+  }
+
   &__block-button {
     display: flex;
     align-items: center;
