fix links and scroll menu

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -19,10 +19,18 @@
       @include hover(transform, scale(1.05));
     }
 
-    &--icons {
-      display: flex;
-      gap: 20px;
+    @include on-tablet {
+      grid-column: 1 / 2;
+      flex-direction: column;
+      justify-content: start;
+      align-items: start;
+      gap: 62px;
     }
+  }
+
+  &__icons {
+    display: flex;
+    gap: 20px;
 
     &--icon {
       width: 24px;
@@ -32,10 +40,11 @@
     }
 
     @include on-tablet {
-      grid-column: 1 / 2;
-      flex-direction: column;
-      justify-content: start;
-      gap: 62px;
+      gap: 32px;
+    }
+
+    @include on-desktop {
+      gap: 22px;
     }
   }
 
