--- a/src/styles/blocks/subscribe-form.scss
+++ b/src/styles/blocks/subscribe-form.scss
@@ -12,11 +12,19 @@
     box-sizing: border-box;
     display: inline-block;
     font-family: inherit;
+    font-size: 14px;
     height: 100%;
     width: 100%;
     padding: 18px 24px;
     border: none;
     outline: none;
+
+    &:autofill,
+    &:autofill:hover,
+    &:autofill:focus {
+      border: none;
+      box-shadow: 0 0 0 1000px $background-color inset;
+    }
 
     @include on-tablet {
       margin-right: 16px;
