--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -107,21 +107,28 @@
   }
 
   &__button {
-    margin-top: 20px;
     display: block;
+    box-sizing: border-box;
+    margin-top: 20px;
+    margin-inline: auto;
     position: relative;
-    width: 280px;
+    width: 100%;
+    max-width: 320px;
     height: 50px;
-    text-transform: uppercase;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 100%;
     border: 1px solid #1a5a4c;
     border-right: 50px solid #1a5a4c;
-    cursor: pointer;
+    color: #0f0e08;
+
+    &:active {
+      color: inherit;
+    }
+
+    &:visited {
+      color: inherit;
+    }
 
     @include on-tablet {
-      width: 269px;
+      width: 320px;
       margin-top: 38px;
     }
 
@@ -141,6 +148,25 @@
       background: url('../images/icons/arrow.svg') no-repeat center;
       background-size: 7.14px 12px;
     }
+  }
+
+  &__botton-text {
+    position: absolute;
+    z-index: 10;
+    display: flex;
+    box-sizing: border-box;
+    padding-right: 50px;
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 100%;
+    width: calc(100% + 50px);
+    height: 100%;
+
+    @include hover(transform, scale(1.03));
   }
 
   .header__actions {
