--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -2,6 +2,10 @@
   min-width: 320px;
   scroll-behavior: smooth;
 
+  &:has(.page__menu:target) {
+    overflow: hidden;
+  }
+
   &__menu {
     top: 0;
     position: absolute;
