correct review comments

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -70,7 +70,7 @@
 
     @include on-desktop {
       left: 0;
-      width: calc(100% + $padding-desktop);
+      width: calc(calc(100vw / 2 + $grid-witdh-desktop + $gap-desktop / 2));
     }
   }
 
