--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -80,8 +80,8 @@
     }
 
     @include on-desktop {
-      left: -$padding-desktop;
-      width: calc(100% + 2 * $padding-desktop);
+      left: calc(($desktop-min-width - 100vw) / 2 - $padding-desktop);
+      width: 100vw;
     }
   }
 
