--- a/src/styles/blocks/address.scss
+++ b/src/styles/blocks/address.scss
@@ -14,12 +14,15 @@
     line-height: 150%;
   }
 
-  &__phone {
+  &__link {
+    display: inline-block;
     color: inherit;
     text-decoration: none;
 
-    &__phone:visited {
+    &__link:visited {
       color: inherit;
     }
+
+    @include hover(transform, scale(1.05));
   }
 }
