--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -28,9 +28,9 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 72px;
 
     @include on-tablet {
+      justify-content: start;
       margin-bottom: 48px;
     }
 
