fixed the errors in the code

--- a/src/styles/footer/footer-menu.scss
+++ b/src/styles/footer/footer-menu.scss
@@ -20,7 +20,7 @@
         color: #0F0E08;
         text-decoration: none;
 
-        font-family: IBM Plex Sans, sans-serif;
+        font-family: "IBM Plex Sans", sans-serif;
         font-size: 14px;
         font-weight: 400;
         line-height: 14px;
