--- a/src/styles/header/header.scss
+++ b/src/styles/header/header.scss
@@ -9,17 +9,16 @@
 
   @include on-tablet {
     display: flex;
-    max-width: 768px;
     flex-direction: row-reverse;
     padding-inline: $tablet-padding-inline;
   }
 
   @include on-small-desktop {
-    max-width: 1280px;
     padding-inline: $small-desktop-padding-inline;
   }
 
   &__background {
+    aspect-ratio: 320 / 340;
     padding-top: 9px;
     text-align: center;
     min-height: 300px;
@@ -41,7 +40,6 @@
     }
 
     @include on-small-desktop {
-      width: 725px;
       height: 655px;
       padding-top: 15px;
       margin-right: -55px;
