--- a/src/styles/header/header__content.scss
+++ b/src/styles/header/header__content.scss
@@ -16,7 +16,7 @@
   }
 
   .header__main-title {
-    color: #000000;
+    color: #000;
     text-align: center;
     margin-bottom: 20px;
     margin-inline: auto;
@@ -32,7 +32,7 @@
       margin-inline: 0;
 
       line-height: 64px;
-      font-size: 54px;
+      font-size: clamp(44px, 7vw, 54px);
     }
 
     @include on-small-desktop {
@@ -97,7 +97,7 @@
       line-height: 50px;
       color: #0F0E08;
 
-      font-family: IBM Plex Sans, sans-serif;
+      font-family: "IBM Plex Sans", sans-serif;
       font-size: 16px;
       font-weight: 500;
 
@@ -124,22 +124,6 @@
       }
     }
   }
-
-  //.header-event {
-  //  display: none;
-  //
-  //  &__line {
-  //    width: 70px;
-  //    height: 1px;
-  //    background-color: #1A5A4C;
-  //  }
-  //
-  //  @include on-small-desktop {
-  //    display: flex;
-  //    align-items: center;
-  //    gap: 20px;
-  //  }
-  //}
 
   li {
     list-style: none;
