--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -17,22 +17,13 @@
   }
 }
 
-@mixin on-desktop {
-  @media (min-width: $desktop-min-width) {
-    max-width: 1440px;
-    padding-inline: $desktop-padding-inline;
-    @content;
-  }
-}
-
 @mixin current-events {
   display: flex;
   justify-content: space-between;
   align-items: center;
 
   .event__img-box {
-    width: 670px;
-    height: 520px;
+    width: 56%;
   }
 
   .event__content {
