--- a/src/styles/blocks/event.css
+++ b/src/styles/blocks/event.css
@@ -9,7 +9,7 @@
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
+      "Droid Sans Mono", monospace;
   white-space: pre;
   display: block;
   padding: 1em;
