--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -27,9 +27,14 @@
 
   &__img {
     width: 100%;
+    height: 100%;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+
+    @include on-small-desktop {
+      width: 100%;
+    }
   }
 
   &__header {
@@ -45,10 +50,15 @@
     }
   }
 
+  &__dates,
+  &__description,
+  &__title {
+    font-family: "IBM Plex Sans", sans-serif;
+  }
+
   &__title {
     color: #687480;
 
-    font-family: IBM Plex Sans, sans-serif;
     font-size: 16px;
     font-weight: 500;
     line-height: 16px;
@@ -62,7 +72,6 @@
   &__dates {
     color: #1A5A4C;
 
-    font-family: IBM Plex Sans, sans-serif;
     font-size: 16px;
     font-weight: 700;
     line-height: 24px;
@@ -108,7 +117,6 @@
   &__description {
     color: #4E4E4E;
 
-    font-family: IBM Plex Sans, sans-serif;
     font-size: 16px;
     font-weight: 300;
     line-height: 24px;
