--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -31,16 +31,17 @@
   margin-bottom: 20px;
 
   @include on-tablet {
-    max-width: 768px;
     min-height: 438px;
     justify-content: center;
   }
 
   @include on-small-desktop {
-    min-width: 1280px;
-    flex-wrap: wrap;
-    justify-content: start;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-auto-rows: auto;
     gap: 30px;
+    width: 100%;
+    margin: 0 auto;
   }
 }
 
@@ -55,56 +56,26 @@
   @include on-tablet {
     width: 48%;
     min-height: 538px;
+    aspect-ratio: 274 / 538;
   }
 
   @include on-small-desktop {
-    width: fit-content;
-    min-height: 360px;
-
-    .img-1 {
-      width: 370px;
-      height: 600px;
-    }
-
-    .img-3 {
-      width: 770px;
-      height: 600px;
-      margin-left: -18px;
-    }
-
-    .img-4 {
-      width: 770px;
-      height: 360px;
-    }
-
-    .img-5 {
-      width: 370px;
-      height: 360px;
-    }
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    aspect-ratio: auto;
   }
 }
 
-//@include on-small-desktop {
-//  .img-1 {
-//    width: 370px;
-//    height: 600px;
-//  }
-//
-//  .img-2 {
-//    width: 770px;
-//    height: 600px;
-//  }
-//
-//  .img-3 {
-//    width: 770px;
-//    height: 360px;
-//  }
-//
-//  .img-4 {
-//    width: 370px;
-//    height: 360px;
-//  }
-//}
+.gallery .mySlides:nth-child(1),
+.gallery .mySlides:nth-child(5) {
+  grid-column: span 4;
+}
+
+.gallery .mySlides:nth-child(3),
+.gallery .mySlides:nth-child(4) {
+  grid-column: span 8;
+}
 
 .slide-active {
   display: flex;
