--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -37,7 +37,7 @@
       align-items: center;
       margin-bottom: 50px;
 
-      font-family: IBM Plex Sans, sans-serif;
+      font-family: "IBM Plex Sans", sans-serif;
       font-size: 18px;
       font-weight: 400;
       line-height: 27px;
