--- a/src/styles/footer/footer-content.scss
+++ b/src/styles/footer/footer-content.scss
@@ -1,5 +1,4 @@
 .footer__content-box {
-
   @include on-small-desktop {
     display: flex;
   }
@@ -18,17 +17,13 @@
     margin-bottom: 87px;
   }
 
-  .footer__block-title {
-
-  }
-
   .footer__block {
     display: flex;
     flex-direction: column;
     gap: 20px;
     max-width: 47%;
 
-    font-family: IBM Plex Sans, sans-serif;
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 21px;
@@ -40,18 +35,13 @@
     @include on-small-desktop {
       width: 174px;
     }
-
   }
 
   .footer__item {
-    font-family: IBM Plex Sans, sans-serif;
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 21px;
-  }
-
-  .footer__block-hours {
-
   }
 
   .footer__block-contacts {
