--- a/src/styles/footer/footer-credits.scss
+++ b/src/styles/footer/footer-credits.scss
@@ -11,7 +11,7 @@
   .footer__credit-text {
     text-align: center;
 
-    font-family: IBM Plex Sans, sans-serif;
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 12px;
     font-weight: 300;
     line-height: 17px;
