--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,18 @@
 @import 'utils';
-@import 'fonts';
-@import 'typography';
 
-body {
-  background: $c-gray;
-}
+@import './blocks/page';
+@import './blocks/container';
+@import './blocks/header';
+@import './blocks/button';
+@import './blocks/icon';
+@import './blocks/menu';
+@import './blocks/nav';
+@import './blocks/schedule';
+@import './blocks/main';
+@import './blocks/section-title';
+@import './blocks/events';
+@import './blocks/exhibition';
+@import './blocks/lecture';
+@import './blocks/signature';
+@import './blocks/gallery';
+@import './blocks/swiper-new';
