--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,55 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin iconAbsolutPosition() {
+  position: absolute;
+  top: 28px;
+  left: 20px;
+
+  @include onTablet {
+    top: 40px;
+    left: 34px;
+  }
+
+  @include onDesktop {
+    top: 40px;
+    left: 55px;
+  }
+}
+
+@mixin inlinePadding() {
+  padding-inline: 20px;
+
+  @include onTablet {
+    padding-inline: 34px;
+  }
+}
+
+@mixin onTablet {
+  @media (min-width: 768px) {
+    @content;
+  }
+}
+
+@mixin onDesktop {
+  @media (min-width: 1280px) {
+    @content;
+  }
+}
+
+@mixin pageGrid {
+  --column: 2;
+  display: grid;
+  column-gap: 20px;
+  grid-template-columns: repeat(var(--column), 1fr);
+
+  @include onTablet() {
+    --column: 6;
+  }
+
+  @include onDesktop() {
+    --column: 12;
+    column-gap: 30px;
+  }
+}
