--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -46,22 +46,26 @@
 }
 
 .mySlides {
-  min-height: 447px;
   display: flex;
+  width: 100%;
   align-items: center;
+  min-height: 447px;
+  aspect-ratio: 280 / 447;
   opacity: 0;
   transform: translateX(100%);
   transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
 
   @include on-tablet {
+    aspect-ratio: 274 / 438;
     width: 48%;
-    min-height: 538px;
-    aspect-ratio: 274 / 538;
+    min-height: 438px;
   }
 
   @include on-small-desktop {
+    min-height: auto;
     width: 100%;
     height: 100%;
+    max-width: none;
     object-fit: cover;
     aspect-ratio: auto;
   }
@@ -80,6 +84,9 @@
 .slide-active {
   display: flex;
   align-items: center;
+
+  align-content: center;
+
   background-color: #2C3E50;
   opacity: 1;
   transform: translateX(0);
@@ -89,10 +96,15 @@
   }
 }
 
+.img {
+  width: 100%;
+}
+
 .dots {
   display: flex;
   justify-content: center;
   gap: 20px;
+  text-align: center;
 
   @include on-small-desktop {
     display: none;
