--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,7 +9,6 @@ h1 {
   font-weight: normal;
   font-style: normal;
 }
-
 @font-face {
   font-family: "IBM Plex Sans", Arial, Helvetica, sans-serif;
   src: url("../fonts/IBMPlexSans-Bold.ttf") format("truetype");
@@ -17,14 +16,12 @@ h1 {
   font-weight: normal;
   font-style: normal;
 }
-
 @font-face {
   font-family: Montserrat, Arial, Helvetica, sans-serif;
   src: url("../fonts/Montserrat-VariableFont_wght.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
-
 .header {
   position: relative;
   width: 100%;
@@ -34,7 +31,6 @@ h1 {
   padding-block: 20px 70px;
   margin-inline: auto;
 }
-
 @media (min-width: 640px) {
   .header {
     display: flex;
@@ -42,13 +38,11 @@ h1 {
     padding-inline: 34px;
   }
 }
-
 @media (min-width: 1280px) {
   .header {
     padding-inline: 55px;
   }
 }
-
 .header__background {
   aspect-ratio: 320/340;
   padding-top: 9px;
@@ -62,7 +56,6 @@ h1 {
   margin-inline: -20px;
   margin-bottom: 20px;
 }
-
 @media (min-width: 640px) {
   .header__background {
     min-width: 340px;
@@ -72,7 +65,6 @@ h1 {
     text-align: left;
   }
 }
-
 @media (min-width: 1280px) {
   .header__background {
     height: 655px;
@@ -80,7 +72,6 @@ h1 {
     margin-right: -55px;
   }
 }
-
 .header__title {
   color: #0F0E08;
   font-family: Montserrat, sans-serif;
@@ -88,14 +79,12 @@ h1 {
   font-weight: 700;
   line-height: 30px;
 }
-
 @media (min-width: 640px) {
   .header__title {
     font-size: 36px;
     line-height: 36px;
   }
 }
-
 .header__menu-top {
   position: absolute;
   width: 24px;
@@ -103,14 +92,12 @@ h1 {
   top: 27px;
   left: 20px;
 }
-
 @media (min-width: 640px) {
   .header__menu-top {
     top: 40px;
     left: 34px;
   }
 }
-
 @media (min-width: 1280px) {
   .header__menu-top {
     left: 55px;
@@ -123,7 +110,6 @@ h1 {
   background-color: #1A5A4C;
   padding: 27px 20px;
 }
-
 @media (min-width: 640px) {
   .page .menu {
     width: 100%;
@@ -131,7 +117,6 @@ h1 {
     padding: 42px 37px 15px;
   }
 }
-
 @media (min-width: 1280px) {
   .page .menu {
     max-height: 260px;
@@ -139,7 +124,6 @@ h1 {
     padding-bottom: 42px;
   }
 }
-
 .page__menu {
   position: absolute;
   top: 0;
@@ -150,7 +134,6 @@ h1 {
   transform: translateX(-100%);
   pointer-events: none;
 }
-
 .page .page__menu:target {
   display: block;
   opacity: 1;
@@ -158,45 +141,38 @@ h1 {
   transform: translateX(0);
   pointer-events: all;
 }
-
 @media (min-width: 640px) {
   .page .page__menu:target {
     display: flex;
     height: fit-content;
   }
 }
-
 .page__menu-box {
   display: flex;
   gap: 20px;
   margin-left: 72px;
   margin-top: -20px;
 }
-
 @media (min-width: 640px) {
   .page__menu-box {
     margin-right: 26px;
     margin-top: 0;
   }
 }
-
 @media (min-width: 1280px) {
   .page__menu-box {
     gap: 32px;
     margin-inline: 102px;
   }
 }
-
 .page__menu-box .page__menu-list {
   width: 100px;
 }
-
 @media (min-width: 1280px) {
   .page__menu-box .page__menu-list {
     width: 170px;
   }
 }
-
 .page__menu-box .page__menu-list .page__menu-item {
   margin-bottom: 24px;
   font-family: "IBM Plex Sans", sans-serif;
@@ -204,26 +180,22 @@ h1 {
   font-weight: 500;
   line-height: 16px;
 }
-
 .page__menu-box .page__menu-list .page__menu-item .page__menu-link {
   color: #fff;
   text-decoration: none;
 }
-
 @media (min-width: 1280px) {
   .page__menu-box .page__menu-list .page__menu-item {
     font-size: 22px;
     line-height: 22px;
   }
 }
-
 .page .page__menu-line {
   width: 280px;
   height: 1px;
   background-color: #fff;
   margin-bottom: 24px;
 }
-
 @media (min-width: 640px) {
   .page .page__menu-line {
     width: 1px;
@@ -231,31 +203,26 @@ h1 {
     margin-right: 38px;
   }
 }
-
 @media (min-width: 1280px) {
   .page .page__menu-line {
     margin-right: 102px;
   }
 }
-
 @media (min-width: 640px) {
   .page .page__hours {
     display: flex;
   }
 }
-
 @media (min-width: 1280px) {
   .page .page__hours {
     gap: 30px;
   }
 }
-
 @media (min-width: 640px) {
   .page .page__hours .page__hours-box {
     margin-right: 26px;
   }
 }
-
 .page .page__hours .page__hours-title {
   margin-bottom: 20px;
   font-family: "IBM Plex Sans", sans-serif;
@@ -263,32 +230,27 @@ h1 {
   font-weight: 400;
   line-height: 20px;
 }
-
 .page .page__hours .page__hours-list {
   margin-bottom: 16px;
 }
-
 .page .page__hours .page__hours-list .page__hours-item {
   font-family: "IBM Plex Sans", sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 21px;
 }
-
 .page .page__hours .page__hours-note {
   font-family: "IBM Plex Sans", sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 21px;
 }
-
 @media (min-width: 640px) {
   .page .page__hours .page__hours-note {
     width: 144px;
     margin-top: 40px;
   }
 }
-
 .page li {
   list-style: none;
 }
@@ -298,7 +260,6 @@ h1 {
   max-width: 340px;
   margin-inline: auto;
 }
-
 @media (min-width: 640px) {
   .header__content {
     min-width: 270px;
@@ -307,14 +268,12 @@ h1 {
     margin-inline: 0;
   }
 }
-
 @media (min-width: 640px) and (min-width: 1280px) {
   .header__content {
     margin-top: 206px;
     min-width: 460px;
   }
 }
-
 .header__content .header__main-title {
   color: #000;
   text-align: center;
@@ -325,7 +284,6 @@ h1 {
   font-weight: 700;
   line-height: 45px;
 }
-
 @media (min-width: 640px) {
   .header__content .header__main-title {
     text-align: left;
@@ -335,7 +293,6 @@ h1 {
     font-size: clamp(44px, 7vw, 54px);
   }
 }
-
 @media (min-width: 1280px) {
   .header__content .header__main-title {
     margin-bottom: 86px;
@@ -343,7 +300,6 @@ h1 {
     font-size: 72px;
   }
 }
-
 .header__content .header-event {
   position: absolute;
   top: 265px;
@@ -351,13 +307,11 @@ h1 {
   display: none;
   transform: rotate(270deg);
 }
-
 .header__content .header-event__line {
   width: 70px;
   height: 1px;
   background-color: #1A5A4C;
 }
-
 @media (min-width: 1280px) {
   .header__content .header-event {
     display: flex;
@@ -365,7 +319,6 @@ h1 {
     gap: 20px;
   }
 }
-
 .header__content .header__tickets {
   position: relative;
   display: flex;
@@ -374,7 +327,6 @@ h1 {
   border: 1px solid #1A5A4C;
   margin-inline: auto;
 }
-
 @media (min-width: 640px) {
   .header__content .header__tickets {
     width: 270px;
@@ -383,25 +335,21 @@ h1 {
     margin-right: auto;
   }
 }
-
 @media (min-width: 640px) and (min-width: 1280px) {
   .header__content .header__tickets {
     margin-left: auto;
     margin-right: 0;
   }
 }
-
 .header__content .header__tickets .header__tickets-info-box {
   width: 230px;
   height: 100%;
 }
-
 @media (min-width: 640px) {
   .header__content .header__tickets .header__tickets-info-box {
     width: 200px;
   }
 }
-
 .header__content .header__tickets .header__tickets-info {
   text-align: center;
   line-height: 50px;
@@ -410,13 +358,11 @@ h1 {
   font-size: 16px;
   font-weight: 500;
 }
-
 @media (min-width: 640px) {
   .header__content .header__tickets .header__tickets-info {
     line-height: 70px;
   }
 }
-
 .header__content .header__tickets .header__tickets-link {
   width: 50px;
   height: 100%;
@@ -424,18 +370,15 @@ h1 {
   right: 0;
   cursor: pointer;
 }
-
 .header__content .header__tickets .header__tickets-link .header__tickets-link-img {
   width: 100%;
 }
-
 @media (min-width: 640px) {
   .header__content .header__tickets .header__tickets-link {
     width: 70px;
     height: 70px;
   }
 }
-
 .header__content li {
   list-style: none;
 }
@@ -443,13 +386,11 @@ h1 {
 .event--exhibition {
   margin-bottom: 60px;
 }
-
 @media (min-width: 640px) {
   .event--exhibition {
     margin-bottom: 112px;
   }
 }
-
 @media (min-width: 1280px) {
   .event--exhibition {
     margin-bottom: 104px;
@@ -488,29 +429,25 @@ h1 {
   width: 100%;
   margin-bottom: 100px;
 }
-
 @media (max-width: 640px) {
   .from-classicism-to-romanticism .event__img-box {
     margin-inline: -20px;
     margin-bottom: 0;
   }
 }
-
 @media (min-width: 640px) {
   .from-classicism-to-romanticism .event__img-box {
     margin-bottom: 0;
   }
 }
-
 .from-classicism-to-romanticism .event__content {
   min-width: 280px;
   background-color: #fff;
-  border-bottom: 2px solid rgba(26, 90, 76, 0.25);
+  border-bottom: 2px solid rgba(26, 90, 76, 0.2509803922);
   padding-block: 20px;
   margin-top: -50px;
   text-align: center;
 }
-
 @media (min-width: 640px) {
   .from-classicism-to-romanticism .event__content {
     width: 90%;
@@ -519,31 +456,26 @@ h1 {
     text-align: left;
   }
 }
-
 @media (min-width: 1280px) {
   .from-classicism-to-romanticism .event__content {
     max-width: 570px;
     padding-inline: 100px;
   }
 }
-
 .from-classicism-to-romanticism .event__header {
   margin-inline: 20px;
 }
-
 @media (min-width: 640px) {
   .from-classicism-to-romanticism .event__header {
     width: 390px;
     margin-inline: 0;
   }
 }
-
 @media (min-width: 1280px) {
   .from-classicism-to-romanticism .event__header {
     width: 320px;
   }
 }
-
 .from-classicism-to-romanticism .event__name {
   margin: 0;
 }
@@ -558,29 +490,24 @@ h1 {
   flex-direction: column;
   gap: 60px;
 }
-
 @media (min-width: 640px) {
   .event {
     gap: 64px;
   }
 }
-
 @media (min-width: 1280px) {
   .event {
     gap: 104px;
   }
 }
-
 .event__img-box {
   margin-bottom: 20px;
 }
-
 @media (min-width: 640px) {
   .event__img-box {
     margin-bottom: 40px;
   }
 }
-
 .event__img {
   width: 100%;
   height: 100%;
@@ -588,13 +515,11 @@ h1 {
   background-position: center;
   background-repeat: no-repeat;
 }
-
 @media (min-width: 1280px) {
   .event__img {
     width: 100%;
   }
 }
-
 .event__header {
   display: flex;
   justify-content: space-between;
@@ -602,46 +527,39 @@ h1 {
   align-items: center;
   margin-bottom: 10px;
 }
-
 @media (min-width: 640px) {
   .event__header {
     width: 220px;
     margin-bottom: 30px;
   }
 }
-
 .event__dates, .event__description, .event__title {
   font-family: "IBM Plex Sans", sans-serif;
 }
-
 .event__title {
   color: #687480;
   font-size: 16px;
   font-weight: 500;
   line-height: 16px;
 }
-
 @media (min-width: 640px) {
   .event__title {
     font-size: 14px;
     line-height: 14px;
   }
 }
-
 .event__dates {
   color: #1A5A4C;
   font-size: 16px;
   font-weight: 700;
   line-height: 24px;
 }
-
 @media (min-width: 640px) {
   .event__dates {
     font-size: 14px;
     line-height: 21px;
   }
 }
-
 .event__name {
   display: flex;
   align-items: baseline;
@@ -652,7 +570,6 @@ h1 {
   font-weight: 400;
   line-height: 28px;
 }
-
 .event__name span {
   display: block;
   width: 10px;
@@ -660,14 +577,12 @@ h1 {
   background-color: #F14A27;
   margin-left: 10px;
 }
-
 @media (min-width: 640px) {
   .event__name span {
     width: 15px;
     height: 15px;
   }
 }
-
 @media (min-width: 640px) {
   .event__name {
     margin-bottom: 15px;
@@ -675,7 +590,6 @@ h1 {
     line-height: 36px;
   }
 }
-
 .event__description {
   color: #4E4E4E;
   font-size: 16px;
@@ -691,7 +605,6 @@ h1 {
 .gallery {
   margin-bottom: 100px;
 }
-
 .gallery__title {
   color: #0F0E08;
   font-family: Montserrat, Arial, Helvetica, sans-serif;
@@ -699,7 +612,6 @@ h1 {
   font-weight: 700;
   line-height: 36px;
 }
-
 @media (min-width: 640px) {
   .gallery__title {
     font-size: 48px;
@@ -716,14 +628,12 @@ h1 {
   transition: transform 0.3s ease-in-out;
   margin-bottom: 20px;
 }
-
 @media (min-width: 640px) {
   .slideshow-container {
     min-height: 438px;
     justify-content: center;
   }
 }
-
 @media (min-width: 1280px) {
   .slideshow-container {
     display: grid;
@@ -736,26 +646,28 @@ h1 {
 }
 
 .mySlides {
-  min-height: 447px;
   display: flex;
+  width: 100%;
   align-items: center;
+  min-height: 447px;
+  aspect-ratio: 280/447;
   opacity: 0;
   transform: translateX(100%);
   transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
 }
-
 @media (min-width: 640px) {
   .mySlides {
+    aspect-ratio: 274/438;
     width: 48%;
-    min-height: 538px;
-    aspect-ratio: 274/538;
+    min-height: 438px;
   }
 }
-
 @media (min-width: 1280px) {
   .mySlides {
+    min-height: auto;
     width: 100%;
     height: 100%;
+    max-width: none;
     object-fit: cover;
     aspect-ratio: auto;
   }
@@ -774,23 +686,27 @@ h1 {
 .slide-active {
   display: flex;
   align-items: center;
+  align-content: center;
   background-color: #2C3E50;
   opacity: 1;
   transform: translateX(0);
 }
-
 @media (min-width: 1280px) {
   .slide-active {
     background-color: transparent;
   }
 }
 
+.img {
+  width: 100%;
+}
+
 .dots {
   display: flex;
   justify-content: center;
   gap: 20px;
+  text-align: center;
 }
-
 @media (min-width: 1280px) {
   .dots {
     display: none;
@@ -823,7 +739,6 @@ h1 {
     opacity: 1;
   }
 }
-
 .subscription {
   text-align: center;
   background-image: url("../images/subscription.png");
@@ -833,19 +748,16 @@ h1 {
   padding: 88px 20px;
   margin-inline: -20px;
 }
-
 @media (min-width: 640px) {
   .subscription {
     padding: 82px 154px;
   }
 }
-
 @media (min-width: 1280px) {
   .subscription {
     padding: 163px 355px;
   }
 }
-
 .subscription__wrapper .subscription__title {
   color: #fff;
   align-items: center;
@@ -854,14 +766,12 @@ h1 {
   font-size: 36px;
   font-weight: 700;
 }
-
 @media (min-width: 640px) {
   .subscription__wrapper .subscription__title {
     font-size: 48px;
     line-height: 48px;
   }
 }
-
 .subscription__wrapper .subscription__text {
   color: #fff;
   align-items: center;
@@ -871,41 +781,35 @@ h1 {
   font-weight: 400;
   line-height: 27px;
 }
-
 @media (min-width: 640px) {
   .subscription__wrapper .subscription__text {
     line-height: 18px;
   }
 }
-
 .subscription__wrapper .subscription__email-form {
   height: 50px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-
 @media (min-width: 640px) {
   .subscription__wrapper .subscription__email-form {
     height: 70px;
     gap: 16px;
   }
 }
-
 .subscription__wrapper .subscription__email-form .subscription__email-input {
   width: 80%;
   height: 100%;
   padding: 18px 24px;
   border: none;
 }
-
 .subscription__wrapper .subscription__email-form .subscription__email-btn {
   width: 50px;
   height: 100%;
   background-color: #F14A27;
   border: none;
 }
-
 @media (min-width: 640px) {
   .subscription__wrapper .subscription__email-form .subscription__email-btn {
     width: 70px;
@@ -927,19 +831,16 @@ h1 {
 .main {
   padding-inline: 20px;
 }
-
 @media (min-width: 640px) {
   .main {
     padding: 34px;
   }
 }
-
 @media (min-width: 1280px) {
   .main {
     padding: 55px;
   }
 }
-
 .main .current-events__title {
   text-align: center;
   margin-bottom: 40px;
@@ -948,7 +849,6 @@ h1 {
   font-weight: 700;
   line-height: 36px;
 }
-
 @media (min-width: 640px) {
   .main .current-events__title {
     text-align: left;
@@ -957,7 +857,6 @@ h1 {
     line-height: 48px;
   }
 }
-
 @media (min-width: 1280px) {
   .main .current-events__title {
     margin-bottom: 56px;
@@ -967,13 +866,11 @@ h1 {
 .event--exhibition {
   margin-bottom: 60px;
 }
-
 @media (min-width: 640px) {
   .event--exhibition {
     margin-bottom: 112px;
   }
 }
-
 @media (min-width: 1280px) {
   .event--exhibition {
     margin-bottom: 104px;
@@ -986,7 +883,6 @@ h1 {
   align-items: center;
   margin-bottom: 40px;
 }
-
 @media (min-width: 640px) {
   .footer__top {
     flex-direction: column;
@@ -994,31 +890,26 @@ h1 {
     gap: 62px;
   }
 }
-
 .footer__top .footer__title {
   font-family: Montserrat, Arial, Helvetica, sans-serif;
   font-size: 36px;
   font-weight: 700;
   line-height: 36px;
 }
-
 .footer__top .footer__social {
   display: flex;
   gap: 20px;
 }
-
 @media (min-width: 640px) {
   .footer__top .footer__social {
     gap: 32px;
   }
 }
-
 @media (min-width: 1280px) {
   .footer__top .footer__social {
     gap: 22px;
   }
 }
-
 .footer__top .footer__social .footer__social-link {
   width: 24px;
   height: 24px;
@@ -1034,20 +925,17 @@ h1 {
   display: flex;
   gap: 20px;
 }
-
 @media (min-width: 640px) {
   .footer__content {
     margin-bottom: 64px;
   }
 }
-
 @media (min-width: 1280px) {
   .footer__content {
     margin-right: 65px;
     margin-bottom: 87px;
   }
 }
-
 .footer__content .footer__block {
   display: flex;
   flex-direction: column;
@@ -1058,26 +946,22 @@ h1 {
   font-weight: 400;
   line-height: 21px;
 }
-
 @media (min-width: 640px) {
   .footer__content .footer__block {
     max-width: 220px;
   }
 }
-
 @media (min-width: 1280px) {
   .footer__content .footer__block {
     width: 174px;
   }
 }
-
 .footer__content .footer__item {
   font-family: "IBM Plex Sans", sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 21px;
 }
-
 .footer__content .footer__block-contacts {
   max-width: 45%;
 }
@@ -1087,7 +971,6 @@ h1 {
   margin-left: auto;
   margin-bottom: 20px;
 }
-
 @media (min-width: 640px) {
   .footer__arrow {
     display: none;
@@ -1095,10 +978,9 @@ h1 {
 }
 
 .footer__divider {
-  background-color: rgba(26, 90, 76, 0.31);
+  background-color: rgba(26, 90, 76, 0.3137254902);
   margin-bottom: 40px;
 }
-
 @media (min-width: 1280px) {
   .footer__divider {
     margin-right: 65px;
@@ -1110,24 +992,20 @@ h1 {
   gap: 20px;
   margin-bottom: 80px;
 }
-
 .footer__menu .footer__menu-list {
   width: 50%;
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
-
 @media (min-width: 1280px) {
   .footer__menu .footer__menu-list {
     width: 170px;
   }
 }
-
 .footer__menu .footer__menu-list .footer__menu-item {
   transition: transform 3s;
 }
-
 .footer__menu .footer__menu-list .footer__menu-item .footer__menu-link {
   color: #0F0E08;
   text-decoration: none;
@@ -1142,14 +1020,12 @@ h1 {
   flex-direction: column;
   gap: 10px;
 }
-
 @media (min-width: 640px) {
   .footer__credits {
     flex-direction: row;
     justify-content: space-between;
   }
 }
-
 .footer__credits .footer__credit-text {
   text-align: center;
   font-family: "IBM Plex Sans", sans-serif;
@@ -1162,27 +1038,23 @@ h1 {
   color: #0F0E08;
   padding: 50px 20px;
 }
-
 @media (min-width: 640px) {
   .footer {
     padding-block: 50px 36px;
     padding-inline: 34px;
   }
 }
-
 @media (min-width: 1280px) {
   .footer {
     padding-inline: 55px;
   }
 }
-
 @media (min-width: 640px) {
   .footer .footer__content-block {
     display: flex;
     gap: 40px;
   }
 }
-
 @media (min-width: 1280px) {
   .footer .footer__content-block {
     gap: 130px;
@@ -1202,3 +1074,5 @@ html {
 body {
   background: #eee;
 }
+
+/*# sourceMappingURL=index.css.map */
