feat: add actual events layout & styles

--- a/src/styles/blocks/icons.scss
+++ b/src/styles/blocks/icons.scss
@@ -11,4 +11,17 @@
   &--close {
     background-image: url(../images/icons/menu-close.svg);
   }
+
+  &--event {
+    display: inline-block;
+    content: '';
+    height: 10px;
+    width: 10px;
+    background-color: #f14a27;
+
+    @include on-tablet {
+      height: 15px;
+      width: 15px;
+    }
+  }
 }
