--- a/src/styles/blocks/section-title.scss
+++ b/src/styles/blocks/section-title.scss
@@ -1,20 +1,15 @@
 .section-title {
-  @include bold-text;
+  font-family: Montserrat, sans-serif;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 100%;
+  text-align: center;
 
-  margin: 0;
-
-  font-size: 32px;
-  line-height: 32px;
+  max-width: 280px;
 
   @include on-tablet {
-    font-size: 40px;
-    line-height: 40px;
-    max-width: 496px;
-  }
-
-  @include on-desktop {
     font-size: 48px;
     line-height: 48px;
-    max-width: 585px;
+    max-width: 470px;
   }
 }
