--- a/src/styles/blocks.scss
+++ b/src/styles/blocks.scss
@@ -1,8 +1,12 @@
-@import './blocks/header';
-@import './blocks/logo';
+@import './blocks/page';
 @import './blocks/container';
 @import './blocks/icons';
-@import './blocks/page';
+@import './blocks/header';
+@import './blocks/logo';
 @import './blocks/menu';
 @import './blocks/nav';
 @import './blocks/schedule';
+@import './blocks/actual-events';
+@import './blocks/event';
+@import './blocks/section-title';
+@import './blocks/main';
