--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,5 @@
 @import 'utils';
 @import 'fonts';
-@import 'typography';
 @import 'blocks';
 
 body {
@@ -8,10 +7,19 @@ body {
   padding: 0;
   font-family: 'IBM Plex Sans', sans-serif;
   font-weight: 300;
+  color: #0f0e08;
 }
 
 input,
 textarea,
 body button {
   font-family: 'IBM Plex Sans', sans-serif;
+}
+
+h1,
+h2,
+h3,
+p {
+  margin: 0;
+  padding: 0;
 }
