feat: add gallery layout & styles

--- a/src/styles/blocks.scss
+++ b/src/styles/blocks.scss
@@ -10,3 +10,5 @@
 @import './blocks/event';
 @import './blocks/section-title';
 @import './blocks/main';
+@import './blocks/gallery';
+@import './blocks/swiper';
