--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -10,4 +10,16 @@
       margin-bottom: 98px;
     }
   }
+
+  &__gallery {
+    margin-bottom: 100px;
+
+    @include on-tablet {
+      margin-bottom: 92px;
+    }
+
+    @include on-desktop {
+      margin-bottom: 200px;
+    }
+  }
 }
