--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,14 @@
 $c-gray: #eee;
+
+$tablet-min-width: 768px;
+$desktop-min-width: 1280px;
+
+$effectDureation: 0.3s;
+
+$main-titles-color: #0F0E08;
+$main-subtitle: #687480;
+$main-text-color: #4E4E4E;
+$main-green-color:#1A5A4C;
+$menu-text-colort: #FFFFFF;
+$main-element-color: #F14A27;
+
