feat: add subscription layout & styles

--- a/src/styles/blocks.scss
+++ b/src/styles/blocks.scss
@@ -12,3 +12,5 @@
 @import './blocks/main';
 @import './blocks/gallery';
 @import './blocks/swiper';
+@import './blocks/subscription';
+@import './blocks/form';
