--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -15,7 +15,7 @@
     }
 
     @include on-desktop {
-      max-width: 100vw;
+      max-width: 100%;
       padding: 0;
       margin: 0;
     }
@@ -34,8 +34,8 @@
     }
 
     &--wide {
-      width: 100vw;
-      max-width: 100vw;
+      width: 100%;
+      max-width: 100%;
 
       @include on-tablet {
         width: 100%;
@@ -43,7 +43,7 @@
 
       @include on-desktop {
         grid-column: span 12;
-        width: 100vw;
+        width: 100%;
       }
     }
   }
