--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,5 +1,5 @@
 .header {
-  display: none !important;
+  // display: none !important;
   height: 100vh;
   position: relative;
   box-sizing: border-box;
