--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -9,6 +9,16 @@
     position: absolute;
     top: 0;
     left: 0;
+
+    @include onTablet {
+      width: calc(100% - 34px * 2);
+      left: 34px;
+    }
+
+    @include onDesktop {
+      width: 100%;
+      left: 0;
+    }
   }
 
   &__content {
@@ -26,7 +36,10 @@
 
   &__signature {
     position: absolute;
+    width: 280px;
     top: 70%;
+    left: 50%;
+    transform: translate(-50%);
     padding: 20px 0;
     background-color: #fff;
     z-index: 2;
