--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -37,4 +37,16 @@
       margin-bottom: 302px;
     }
   }
+
+  &__gallery {
+    margin-bottom: 100px;
+
+    @include onTablet {
+      margin-bottom: 92px;
+    }
+
+    @include onDesktop {
+      margin-bottom: 200px;
+    }
+  }
 }
