--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,4 +15,5 @@
 @import './blocks/lecture';
 @import './blocks/signature';
 @import './blocks/gallery';
-@import './blocks/swiper-new';
+@import './blocks/my-swiper';
+@import './blocks/subscribe';
